fix: caption visiblility updated when a card is previewed

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -179,7 +179,7 @@
   width: 100%;
   padding-top: 10px;
   margin: 0;
-  opacity: 20%;
+  opacity: 100%;
 }
 
 .modal__close_image-preview {
